objects/tysosla__Service_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for Cases and Service Cloud.</description>
    <fields>
        <fullName>tysosla__Allow_First_Touch_to_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow First Touch Due to change after a Case is opened, if the Business Hours Change.</description>
        <inlineHelpText>Allow First Touch Due to change after a Case is opened, if the Business Hours Change.</inlineHelpText>
        <label>Allow First Touch to Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tysosla__Calc_Blank_First_Touch__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Will always force a calculation of First Touch Due when it is blank, even if a user forces it to be blank.</description>
        <inlineHelpText>Will always force a calculation of First Touch Due when it is blank, even if a user forces it to be blank.</inlineHelpText>
        <label>Calc Blank First Touch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tysosla__Calc_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, this will calculate the response time when the first touch is filled in, regardless of status change.</description>
        <inlineHelpText>If selected, this will calculate the response time when the first touch is filled in, regardless of status change.</inlineHelpText>
        <label>Calc Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tysosla__Enable_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tysosla__Error_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If enabled, will create logs as text files and attach them as files.</description>
        <inlineHelpText>If enabled, will create logs as text files and attach them as files.</inlineHelpText>
        <label>Error Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tysosla__Highest_Priority__c</fullName>
        <label>Highest Priority</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tysosla__Initial_Case_Status__c</fullName>
        <description>What is the initial Case Status when a case is opened?</description>
        <inlineHelpText>What is the initial Case Status when a case is opened?</inlineHelpText>
        <label>Initial Case Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tysosla__Lowest_Priority__c</fullName>
        <label>Lowest Priority</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tysosla__Resolution_in_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, will show the resolution time in hours in the sla editor.</description>
        <inlineHelpText>If checked, will show the resolution time in hours in the sla editor.</inlineHelpText>
        <label>Resolution in Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tysosla__Track_Closed_Case_Statuses__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If enabled, will allow you to track time in closed case statuses.</description>
        <inlineHelpText>If enabled, will allow you to track time in closed case statuses.</inlineHelpText>
        <label>Track Closed Case Statuses</label>
        <type>Checkbox</type>
    </fields>
    <label>Service Settings</label>
</CustomObject>